--- a/app/src/main/res/menu/menu_watch_dog_main.xml
+++ b/app/src/main/res/menu/menu_watch_dog_main.xml
@@ -1,6 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".WatchDogMain">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_add_verified_connection"
+    app:showAsAction="always"
+    android:icon="@android:drawable/ic_menu_add"
+    android:title="Add Connection" />
 </menu>
