--- a/app/src/main/res/layout/content_watch_dog_main.xml
+++ b/app/src/main/res/layout/content_watch_dog_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
-    android:orientatin="vertical"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_watch_dog_main">
     <ListView
