App outputs Processes and Services
Changed the content_watch_dog_main.xml ListView to make accessing the Id
possible in WatchDogMain.java.  Added code to output list to screen to
WatchDogMain.java along with methods to clear and update them.

--- a/app/src/main/res/layout/content_watch_dog_main.xml
+++ b/app/src/main/res/layout/content_watch_dog_main.xml
@@ -10,8 +10,9 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@android:id/list"
+        android:id="@+id/listView"
         android:layout_weight="1" />
+
 </LinearLayout>
 
 
