--- a/app/src/main/res/layout/content_watch_dog_main.xml
+++ b/app/src/main/res/layout/content_watch_dog_main.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        tools:listitem="@android:layout/simple_list_item_1" />
 
 </LinearLayout>
 
