--- a/app/src/main/res/menu/menu_watch_dog_main.xml
+++ b/app/src/main/res/menu/menu_watch_dog_main.xml
@@ -5,8 +5,8 @@
     app:showAsAction="always"
     android:icon="@android:drawable/ic_menu_add"
     android:title="Add Connection" />-->
-    <item android:id="!+id/dropDown"
-        app:showasAction="always"
+    <item android:id="@+id/dropDown"
+        app:showAsAction="always"
         app:actionViewClass="android.widget.Spinner"
         android:title="dropDown"
         />
