Black text layout added, some code merged

--- a/app/src/main/res/menu/menu_watch_dog_main.xml
+++ b/app/src/main/res/menu/menu_watch_dog_main.xml
@@ -8,7 +8,5 @@
     <item android:id="@+id/dropDown"
         app:showAsAction="always"
         app:actionViewClass="android.widget.Spinner"
-        android:title="dropDown"
-        />
-
+        android:title="dropDown"/>
 </menu>
