--- a/app/src/main/res/layout/content_watch_dog_main.xml
+++ b/app/src/main/res/layout/content_watch_dog_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:id="@+id/listView"
         android:layout_weight="1"
-        tools:listitem="@android:layout/simple_list_item_1" />
+        tools:listitem="@android:layout/blacktext" />
 
 </LinearLayout>
 
